# indimail-mta

./: .gitignore  CODE_OF_CONDUCT.md  README.md  catChangeLog  indimail.abcd  prepare_obs  project_changelogs
altermime-0.3.10/: .gitignore  ChangeLog  INSTALL  LICENCE  MIME_headers.c  MIME_headers.h  Makefile.am  altermime.1  altermime.c  config.h.in  configure  configure.ac  configure.in  mime_alter.c  mime_alter.h  qpe.c  qpe.h
bogofilter-1.2.4/: .gitignore  AUTHORS  Doxyfile  GETTING.STARTED  Makefile.am  NEWS  README  TODO  aclocal.m4  bogofilter.cf.example  config.in  configure.ac  default.configure
bogofilter-1.2.4/contrib/: README.contrib  README.randomtrain  bogo.R  bogogrep.c  dot-qmail-bogofilter-default  mailfilter.example  mime.get.rfc822.pl  randomtrain.sh  scramble.sh  trainbogo.sh  vm-bogofilter.el
bogofilter-1.2.4/doc/: Makefile.am  README.db  bf_compact.1in  bf_compact.htmlin  bf_copy.1in  bf_copy.htmlin  bf_tar.1in  bf_tar.htmlin  bf_tar.xml  bogofilter-SA-2005-01  bogofilter-SA-2005-02  bogofilter-SA-2010-01  bogofilter-SA-2012-01  bogofilter-faq-bg.xhtml  (+15 more)
bogofilter-wordlist-1.0/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bogofilter-wordlist.spec.in  catChangeLog  configure.ac  create_rpm  create_rpm.in  default.configure  download.sh  training.sh
courier-imap-3.0.8/: .gitignore  00README.NOW.OR.SUFFER  AUTHORS  ChangeLog  INSTALL  INSTALL.html.in  Makefile.am  NEWS  NEWS.html  README  aclocal.m4  configure  configure.in  courier-imap.spec.in  courier-imap.sysvinit.in  dbobj.config.in  dbobj.h.in  imapd-ssl.rc.in  imapd.rc.in  pop3d-ssl.rc.in  pop3d.rc.in  rpm.release  sysconftool
courier-imap-4.11.0/: Makefile.am  configure.in  pop3d-ssl.rc.in  pop3d.rc.in  sysconftool
courier-imap-5.0.4/: Makefile.am  configure.ac  rpm.release
danetlsa-1.0/: AUTHORS  CREDITS  ChangeLog  Makefile  Makefile.am  NEWS  README  config.h  config.h.in  config.status  configure.ac  create_rpm  danetlsa.c  danetlsa.spec  default.configure  error_str.c  libtool  query-getdns.h  tlsa_variables.c  tlsarr  tlsarr.c
flash-0.9.4/: .gitignore  AUTHORS  INSTALL  MTREE_DIRS  Makefile.am  README  alarms.c  background.c  config.h.in  configure  configure.ac  configure.in  countdown.c  crypt.c  debug.c  debug.h  event.c  event.h  exec.c  exec.h  flash.1  main.c  menu.c  menu.h  misc.c  misc.h  module.c  module.h  mystring.c  mystring.h  nc_about.c  nc_init.c  nc_job.c  nc_lock.c  nc_menus.c  nc_misc.c  nc_module.c  ncr_scr.h  parse.c  parse.h  (+16 more)
fortune-1.1/: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.in  copy_fortune.in  fortune.c  fortune.man  randstr.c  randstr.man  rot.man  strfile.c  strfile.h  strfile.man  try.c  unstr.c  unstr.man
indimail-2.6/: .gitignore  ChangeLog  CopyEmailFile.c  INSTALL-MINI  INSTALL-MYSQL.in  INSTALL-RPM  INSTALL-RPM.in  INSTALL.in  LoadDbinfo.c  Login_Tasks.c  MIGRATION.txt  MailQuotaWarn.c  MakeArgs.c  Makefile.am  ProcessInFifo.c  README.in  RELEASE-Notes.in  RelayInLookup.c  RemoteBulkMail.c  SendWelcomeMail.c  addaliasdomain.c  adduser.c  atrn_access.c  authindi.c  authpgsql.c  backfill.c  bulk_mail.c  check_quota.c  chowkidar.c  clearopensmtp.8  compile_morercpthosts.c  configure.ac  controlfiles.i  crc.1  crc.c  crcdiff.c  cronlist.in  dbinfo.c  dbinfoSelect.c  dbinfoUpdate.c  (+92 more)
indium-1.0/: FMbrowse.tcl  INSTALL  IndiMailHelp.tcl  Makefile.am  Makefile.in  aclocal.m4  balloon.tcl  base64.tcl  common.tcl.in  config.h.in  configure  configure.ac  configure.in  convert_history.tcl  convert_profile.tcl  default.config  fbsql.c  fileman.tcl.in  filemanrc  gitignore  global.tcl  gui.tcl  help.tcl  hugelist.tcl  indium-rpmlintrc.in  indium.in  indium.spec.in  keydistribute.tcl  listserver.tcl  litesrc.in  madHelp.tcl  mclistbox.tcl  notebook.tcl  progressbar.tcl  pwhelper.c  secpanel.dist  secpanel.tcl.in  secpanel.wait  secpanel_remoteconf.sh  supernotepad.tcl  (+4 more)
ircube-1.0/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  bogo-learn  configure  configure.ac  create_rpm  default.configure  ircube.spec
iwebadmin-1.1/: ChangeLog  INSTALL  Makefile.am  TODO  alias.c  auth.c  autorespond.c  cgi.c  cgi.h  command.h  configure.in  dotqmail.c  dotqmail.h  forward.c  html.h  iwebadmin-rpmlintrc.in  iwebadmin.c  iwebadmin.spec.in  iwebadmin_perm_list.in  iwebadminx.h  mailinglist.c  printh.c  printh.h  qmailadmin.c  qmailadmin.h  qmailadminx.h  show.c  show.h  template.c  user.c  util.c
iwebadmin-1.2/: ChangeLog  INSTALL  Makefile.am  README.hooks  autorespond.c  command.c  configure.ac  configure.in  iwebadmin-rpmlintrc.in  iwebadmin.c  iwebadmin.h  iwebadmin.spec.in  iwebadmin_perm_list.in  mailinglist.c  template.c  user.c  user.h  util.c  util.h
iwebadmin-1.3/: .gitignore  BUGS  INSTALL  Makefile.am  README  TRANSLATORS  alias.c  alias.h  autorespond.c  cgi.c  command.c  configure.ac  default.configure  iwebadmin.c  iwebadmin.h  iwebadmin.spec.in  iwebadmin_perm_list.in  limits.c  limits.h  mailinglist.c  mailinglist.h  template.c  template.h  user.c  util.c
libdkim-1.3/: .gitignore  ChangeLog  Makefile.am  NEWS  aclocal.m4  config.h.in  configure  configure.in  dkim.c  dkimfuncs.cpp  dns.h
libdkim-x/: .gitignore  AUTHORS  ChangeLog  Makefile.am  PKGBUILD.in  Yahoo! DomainKeys Patent License Agreement v1_1.htm  catChangeLog  configure.ac  create_archpkg  create_debian  create_rpm  default.configure  dkim.9  dkim.c  dkim.cpp  dkim.h  dkimfuncs.cpp  dkimsign.cpp  dkimsign.h  dkimverify.cpp  dkimverify.h  dns.cpp  libdkim.pc.in  libdkim.spec.in  yahoo-patent-license-1.2.txt
libdkim2-x/: .gitignore  Makefile.am  PKGBUILD.in  conf-email  configure.ac  create_archpkg  create_debian  create_rpm  default.configure  dkim.9  dkim.cpp  dkim.h  dkimfuncs.cpp  dkimsign.cpp  dkimsign.h  dkimverify.cpp  dns.cpp  dns.h  libdkim2.spec.in  prepare_obs
libsrs2-x/: .gitignore  ChangeLog  Makefile.am  PKGBUILD.in  catChangeLog  conf-email  configure.ac  create_archpkg  create_debian  create_rpm  default.configure  libsrs2-rpmlintrc  libsrs2.pc.in  libsrs2.spec.in  srs.1
(+10241 files in other folders)
